docs(java): adiciona anotacoes e imagens sobre instalacao do vscode